--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -198,7 +198,12 @@ jobs:
           # Test with additional arguments
           python huv venv test-seed-parent --seed
           python huv venv test-seed-child --parent test-seed-parent --seed
-          if (!(Test-Path "test-seed-child\Scripts\pip.exe")) { exit 1 }
+          # Test that pip is functional in the child environment
+          & "test-seed-child\Scripts\python.exe" -m pip --version
+          if ($LASTEXITCODE -ne 0) { 
+            Write-Host "pip not functional in child environment"
+            exit 1 
+          }
         shell: powershell
 
       - name: Test error conditions (Unix)
